fixing z-index issue

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -81,8 +81,6 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100vh;
   z-index: 2;
 }
 .navBar.menuContainer img {
